--- a/src/components/ListItem.scss
+++ b/src/components/ListItem.scss
@@ -5,7 +5,7 @@
     align-items: center;
     padding: 10px;
     border-bottom: 1px solid #fff;
-    height: 100%;
+    height: 100px;
     .list-item__routes {
         display: flex;
         flex-direction: row;
